--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "11_ecommerce_web",
+  "homepage": "https://github.com/CoderUzumaki/github.io/shopme-ecommerce",
+  "name": "shopme-ecommerce",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -11,6 +14,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "gh-pages": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
